--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=1001
+#server.port=1001
 spring.datasource.name=book
-spring.datasource.url=jdbc:mysql://localhost:3306/book 
+spring.datasource.url=jdbc:mysql://containers-us-west-116.railway.app:7833/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=lOlIxoOvXLwWk9nYouox
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
