--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+
+
 
 ### STS ###
 .apt_generated
@@ -22,6 +20,7 @@ target/
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
+/Dockerfile/
 /dist/
 /nbdist/
 /.nb-gradle/
